GNOME Bugzilla – Bug 780283
eel-gtk-extensions: avoid deprecated warnings
Last modified: 2017-08-17 13:57:56 UTC
Compiling the master branch gives deprecated warnings in eel-gtk-extensions.
Created attachment 348288 [details] [review] Patch While compiling the master branch to see new features of nautilus, I saw deprecated warnings. Hence this patch is a attempt to fix that. Regards !
Review of attachment 348288 [details] [review]: woo excellent, good code and message in the first try!
Thanks for the fast review ! (In reply to Carlos Soriano from comment #2) > woo excellent, good code and message in the first try! In fact ... is my first time at the first attempt!