eel-gtk-extensions: avoid deprecated warnings

This patch avoids the use of gdk_screen_get_width,
gdk_screen_get_height,gdk_screen_width,gdk_screen_height, functions
which are deprecated since 3.22 version of GDK library.

Also deletes the eel_pop_up_context_menu function since is not used
in the source code.

https://bugzilla.gnome.org/show_bug.cgi?id=780283